maze.lessons.maze.island.IslandMaze.scala.error
Escaper:15: error: unclosed comment
/*def keepHandOnSideWall()
^Escaper:15: error: unclosed comment
/*def keepHandOnSideWall()
^Escaper:15: error: unclosed comment
/*def keepHandOnSideWall()
^Escaper:2: error: Missing closing brace `}' assumed here
override def run() {
^Escaper:2: error: expected start of definition
override def run() {
         ^Escaper:15: error: unclosed comment
/*def keepHandOnSideWall()
^