maze.lessons.maze.island.IslandMaze.scala.code
override def run() {
  while (!estSurBiscuit())
  {
    if (!estFaceMur())
    	avance()
    else
    {
      droite()
    }
  }
  prendBiscuit()
}

/*def keepHandOnSideWall()
{
  gauche()
  if (estFaceMur()) //on a trouvé un mur à notre gauche
  {
    droite()
    if (estFaceMur())  //et on a trouvé un mur en face de nous donc on part à droite
    	droite()
    else               //c'est libre en face donc on avance()
    	avance()
  }
  else //on a pas de mur à notre gauche, on avance
  	avance()
}